<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_news_topic_default"
        android:entries="@array/settings_topics_labels"
        android:entryValues="@array/settings_topics_values"
        android:key="@string/settings_news_topic_key"
        android:title="@string/settings_news_topic_label"/>
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"/>
</PreferenceScreen>